--- a/css/style.css
+++ b/css/style.css
@@ -75,3 +75,9 @@ html{
     height: auto; /* Ajusta automáticamente la altura para mantener la proporción */
     border-radius: 50%;
 }
+
+footer{
+    color: var(--blanco);
+    text-align: center;
+    margin-bottom: 1rem;
+}
